@startuml clases

hide empty members
skinparam linetype polyline
skinparam arrowLollipopColor #ADD1B2

MainView -right(0- MainPresenter : IMainContract.Presenter
MainView -right0)- MainPresenter : IMainContract.View
MainView -up..-> InfoView : <<use>>
MainView -left..> DetailsView : <<use>>
MainView -down..> AnhadirPuntoInteresView : <<use>>
MainPresenter -right(0- GasolinerasRepository : IGasolinerasRepository

AnhadirPuntoInteresView -right(0- AnhadirPuntoInteresPresenter : IAnhadirPuntoInteresContract.Presenter
AnhadirPuntoInteresView -right0)- AnhadirPuntoInteresPresenter : IAnhadirPuntoInteresContract.View
AnhadirPuntoInteresPresenter -right(0- PuntoInteresDAO : IPuntosInteresDAO

class MainPresenter {
    -load()
}

interface IMainContract#View {
    + init()
    + getGasolinerasRepository() : IGasolinerasRepository
    + showStations(List<Gasolinera> stations)
    + showLoadCorrect(int stations)
    + showLoadError()
    + showStationDetails(Gasolinera station)
    + showInfoActivity()
}

interface IMainContract#Presenter {
    + init(View view)
    + onStationClicked(Gasolinera station)
    + onMenuInfoClicked()
}

interface IGasolinerasRepository {
    + requestGasolineras(ICallBack cb, String ccaa)
}

interface ICallBack {
    + onSuccess(List<Gasolinera> gasolineras)
    + onFailure(Throwable e)
}

interface IAnhadirPuntoInteresContract#Presenter {
    + onGuardarPuntoInteresClicked(String nombre, String latitudStr, String longitudStr)
}

interface IAnhadirPuntoInteresContract#View {
    + mostrarMensaje(String mensaje)
    + obtenerNombre() : String
    + obtenerLatitud() : String
    + obtenerLongitud() : String
    + cerrarVista()
    + getPuntosInteresDAO() : IPuntosInteresDao
}

interface IPuntosInteresDao {
    + getAll() : List<PuntoInteres>
    + loadById(int PuntoInteresId) : PuntoInteres
    + loadByName(String NombrePuntoInteres) : PuntoInteres
    + loadByLatLon(double lat, double lon) : PuntoInteres
    + insertAll(PuntoInteres... puntoInteres)
    + delete(PuntoInteres puntoInteres)
}

@enduml
